@@ -18,4 +18,5 @@ Asrita Chetan,
 John R. Thorstensen,
 Kimura Fuyuki,
 Kirill Ponomarew,
-Pablo Martikian
+Pablo Martikian,
+Paul Ray
